temporary scrollbar fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,7 @@ body {
   font-family: Verdana, sans-serif;
   margin: auto;
   padding: 20px;
+  padding-left: calc(100vw - 100% + 20px);
   max-width: 65ch;
   text-align: left;
   background-color: #fff;
@@ -113,4 +114,3 @@ hr {
   border-top: 1px solid #ddd;
   margin: 1rem 0;
 }
-
